Bug 859608 - Flush GL on overdraw on Tegra devices. - r=bjacob